--- a/package.json
+++ b/package.json
@@ -16,8 +16,13 @@
     "sass": "^1.89.2",
     "sass-loader": "^13.3.3",
     "shiki": "^3.7.0",
+    "vite-plugin-vuetify": "^2.1.1",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
-    "vuetify": "^3.9.0-beta.1"
+    "vuetify": "^3.9.0-beta.1",
+    "vuetify-nuxt-module": "^0.18.7"
+  },
+  "devDependencies": {
+    "fast-glob": "^3.3.3"
   }
 }
