--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^3.6.3",
+    "@nuxt/image": "^1.11.0",
     "nuxt": "^3.17.6",
     "sass": "^1.89.2",
     "sass-loader": "^13.3.3",
