--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -1,41 +1,119 @@
 {
   "version": 3,
   "overrides": {
+    "documentation/index.html": {
+      "path": "documentation"
+    },
+    "build-Apps/index.html": {
+      "path": "build-Apps"
+    },
     "index.html": {
       "path": ""
     },
     "docs/index.html": {
       "path": "docs"
     },
-    "docs/observation/read/index.html": {
-      "path": "docs/observation/read"
+    "docs/care team/search/index.html": {
+      "path": "docs/care team/search"
     },
-    "docs/care-team/search/index.html": {
-      "path": "docs/care-team/search"
+    "docs/care team/read/index.html": {
+      "path": "docs/care team/read"
     },
-    "docs/observation/search/index.html": {
-      "path": "docs/observation/search"
+    "docs/care-plan/read/index.html": {
+      "path": "docs/care-plan/read"
     },
-    "build-apps/index.html": {
-      "path": "build-apps"
+    "docs/allergy-intolerance/read/index.html": {
+      "path": "docs/allergy-intolerance/read"
     },
-    "Documentation/index.html": {
-      "path": "Documentation"
+    "docs/care-plan/search/index.html": {
+      "path": "docs/care-plan/search"
     },
-    "documentation/index.html": {
-      "path": "documentation"
+    "docs/condition/read/index.html": {
+      "path": "docs/condition/read"
     },
-    "Build-Apps/index.html": {
-      "path": "Build-Apps"
+    "docs/device/search/index.html": {
+      "path": "docs/device/search"
+    },
+    "docs/diagnostic-report/search/index.html": {
+      "path": "docs/diagnostic-report/search"
+    },
+    "docs/document-reference/read/index.html": {
+      "path": "docs/document-reference/read"
     },
     "docs/allergy-intolerance/search/index.html": {
       "path": "docs/allergy-intolerance/search"
     },
-    "docs/care-team/read/index.html": {
-      "path": "docs/care-team/read"
+    "docs/condition/search/index.html": {
+      "path": "docs/condition/search"
     },
-    "docs/allergy-intolerance/read/index.html": {
-      "path": "docs/allergy-intolerance/read"
+    "docs/diagnostic-report/read/index.html": {
+      "path": "docs/diagnostic-report/read"
+    },
+    "docs/device/read/index.html": {
+      "path": "docs/device/read"
+    },
+    "docs/encounter/read/index.html": {
+      "path": "docs/encounter/read"
+    },
+    "docs/document-reference/search/index.html": {
+      "path": "docs/document-reference/search"
+    },
+    "docs/encounter/search/index.html": {
+      "path": "docs/encounter/search"
+    },
+    "docs/goal/read/index.html": {
+      "path": "docs/goal/read"
+    },
+    "docs/Observation/search/index.html": {
+      "path": "docs/Observation/search"
+    },
+    "docs/goal/search/index.html": {
+      "path": "docs/goal/search"
+    },
+    "docs/medication-request/read/index.html": {
+      "path": "docs/medication-request/read"
+    },
+    "docs/medication-request/search/index.html": {
+      "path": "docs/medication-request/search"
+    },
+    "docs/Organization/search/index.html": {
+      "path": "docs/Organization/search"
+    },
+    "docs/Observation/read/index.html": {
+      "path": "docs/Observation/read"
+    },
+    "docs/patient/read/index.html": {
+      "path": "docs/patient/read"
+    },
+    "docs/practitioner/read/index.html": {
+      "path": "docs/practitioner/read"
+    },
+    "docs/Organization/read/index.html": {
+      "path": "docs/Organization/read"
+    },
+    "docs/patient/search/index.html": {
+      "path": "docs/patient/search"
+    },
+    "docs/Procedure/read/index.html": {
+      "path": "docs/Procedure/read"
+    },
+    "docs/practitioner/search/index.html": {
+      "path": "docs/practitioner/search"
+    },
+    "docs/Provenance/read/index.html": {
+      "path": "docs/Provenance/read"
+    },
+    "docs/Procedure/search/index.html": {
+      "path": "docs/Procedure/search"
+    },
+    "build-apps/index.html": {
+      "path": "build-apps"
+    },
+    "Build-Apps/index.html": {
+      "path": "Build-Apps"
+    },
+    "Documentation/index.html": {
+      "path": "Documentation"
     }
   },
   "routes": [
