--- a/.vercel/output/config.json
+++ b/.vercel/output/config.json
@@ -13,11 +13,17 @@
     "docs/index.html": {
       "path": "docs"
     },
-    "docs/care-team/search/index.html": {
-      "path": "docs/care-team/search"
+    "docs/care-plan/read/index.html": {
+      "path": "docs/care-plan/read"
     },
-    "docs/condition/search/index.html": {
-      "path": "docs/condition/search"
+    "docs/allergy-intolerance/read/index.html": {
+      "path": "docs/allergy-intolerance/read"
+    },
+    "docs/document-reference/read/index.html": {
+      "path": "docs/document-reference/read"
+    },
+    "docs/care-team/read/index.html": {
+      "path": "docs/care-team/read"
     },
     "docs/condition/read/index.html": {
       "path": "docs/condition/read"
@@ -25,89 +31,83 @@
     "docs/device/read/index.html": {
       "path": "docs/device/read"
     },
-    "docs/allergy-intolerance/read/index.html": {
-      "path": "docs/allergy-intolerance/read"
-    },
-    "docs/care-team/read/index.html": {
-      "path": "docs/care-team/read"
-    },
-    "docs/device/search/index.html": {
-      "path": "docs/device/search"
-    },
     "docs/allergy-intolerance/search/index.html": {
       "path": "docs/allergy-intolerance/search"
-    },
-    "docs/care-plan/read/index.html": {
-      "path": "docs/care-plan/read"
-    },
-    "docs/care-plan/search/index.html": {
-      "path": "docs/care-plan/search"
-    },
-    "docs/diagnostic-report/read/index.html": {
-      "path": "docs/diagnostic-report/read"
-    },
-    "docs/diagnostic-report/search/index.html": {
-      "path": "docs/diagnostic-report/search"
     },
     "docs/document-reference/search/index.html": {
       "path": "docs/document-reference/search"
     },
+    "docs/diagnostic-report/read/index.html": {
+      "path": "docs/diagnostic-report/read"
+    },
     "docs/encounter/search/index.html": {
       "path": "docs/encounter/search"
+    },
+    "docs/care-team/search/index.html": {
+      "path": "docs/care-team/search"
     },
     "docs/encounter/read/index.html": {
       "path": "docs/encounter/read"
     },
-    "docs/document-reference/read/index.html": {
-      "path": "docs/document-reference/read"
+    "docs/care-plan/search/index.html": {
+      "path": "docs/care-plan/search"
     },
-    "docs/goal/read/index.html": {
-      "path": "docs/goal/read"
+    "docs/condition/search/index.html": {
+      "path": "docs/condition/search"
+    },
+    "docs/device/search/index.html": {
+      "path": "docs/device/search"
+    },
+    "docs/diagnostic-report/search/index.html": {
+      "path": "docs/diagnostic-report/search"
     },
     "docs/goal/search/index.html": {
       "path": "docs/goal/search"
     },
-    "docs/medication-request/search/index.html": {
-      "path": "docs/medication-request/search"
+    "docs/goal/read/index.html": {
+      "path": "docs/goal/read"
+    },
+    "docs/observation/read/index.html": {
+      "path": "docs/observation/read"
     },
     "docs/medication-request/read/index.html": {
       "path": "docs/medication-request/read"
     },
-    "docs/Observation/search/index.html": {
-      "path": "docs/Observation/search"
-    },
-    "docs/Observation/read/index.html": {
-      "path": "docs/Observation/read"
-    },
-    "docs/Organization/search/index.html": {
-      "path": "docs/Organization/search"
-    },
-    "docs/Organization/read/index.html": {
-      "path": "docs/Organization/read"
-    },
-    "docs/patient/search/index.html": {
-      "path": "docs/patient/search"
+    "docs/organization/read/index.html": {
+      "path": "docs/organization/read"
     },
     "docs/patient/read/index.html": {
       "path": "docs/patient/read"
     },
-    "docs/practitioner/search/index.html": {
-      "path": "docs/practitioner/search"
-    },
     "docs/practitioner/read/index.html": {
       "path": "docs/practitioner/read"
     },
-    "docs/Procedure/search/index.html": {
-      "path": "docs/Procedure/search"
+    "docs/medication-request/search/index.html": {
+      "path": "docs/medication-request/search"
     },
-    "docs/Procedure/read/index.html": {
-      "path": "docs/Procedure/read"
+    "docs/procedure/search/index.html": {
+      "path": "docs/procedure/search"
+    },
+    "docs/observation/search/index.html": {
+      "path": "docs/observation/search"
+    },
+    "docs/organization/search/index.html": {
+      "path": "docs/organization/search"
+    },
+    "docs/practitioner/search/index.html": {
+      "path": "docs/practitioner/search"
+    },
+    "docs/patient/search/index.html": {
+      "path": "docs/patient/search"
+    },
+    "docs/procedure/read/index.html": {
+      "path": "docs/procedure/read"
+    },
+    "docs/provenance/read/index.html": {
+      "path": "docs/provenance/read"
     },
     "Build-Apps/index.html": {
       "path": "Build-Apps"
-    },
-    "docs/Provenance/read/index.html": {
-      "path": "docs/Provenance/read"
     },
     "Documentation/index.html": {
       "path": "Documentation"
