--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "framework": "nuxt",
+  "framework": "nuxtjs",
   "buildCommand": "npm run build",
   "outputDirectory": ".output",
   "routes": [
